--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "knex": "^0.21.17",
+    "serve": "^11.3.2",
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
